fix: バージョンの表記修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       astro: ${{ steps.filter.outputs.astro }}
     steps:
       - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@3
+      - uses: dorny/paths-filter@v3
         id: filter
         with:
           filters: |
