--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,7 +157,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install pnpm
-        uses: pnpm/action-setup@4
+        uses: pnpm/action-setup@v4
         with:
           version: 10
 
@@ -186,7 +186,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install pnpm
-        uses: pnpm/action-setup@4
+        uses: pnpm/action-setup@v4
         with:
           version: 10
 
