add: ヘッダー画像スライダーを追加

--- a/astro/package.json
+++ b/astro/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@iconify-json/ri": "^1.2.8",
+		"@splidejs/splide": "^4.1.4",
 		"astro": "^5.16.15",
 		"astro-icon": "^1.1.5"
 	},
