--- a/astro/package.json
+++ b/astro/package.json
@@ -15,7 +15,8 @@
 		"@iconify-json/ri": "^1.2.8",
 		"@splidejs/splide": "^4.1.4",
 		"astro": "^5.16.15",
-		"astro-icon": "^1.1.5"
+		"astro-icon": "^1.1.5",
+		"sharp": "^0.34.5"
 	},
 	"devDependencies": {
 		"@astrojs/tailwind": "^6.0.2",
