--- a/astro/package.json
+++ b/astro/package.json
@@ -12,13 +12,16 @@
 		"format": "biome format --write ."
 	},
 	"dependencies": {
+		"@astrojs/preact": "^4.1.3",
 		"@iconify-json/ri": "^1.2.9",
 		"@splidejs/splide": "^4.1.4",
 		"astro": "^5.16.15",
 		"astro-icon": "^1.1.5",
 		"dayjs": "^1.11.19",
 		"marked": "^17.0.1",
-		"sharp": "^0.34.5"
+		"preact": "^10.28.3",
+		"sharp": "^0.34.5",
+		"swr": "^2.4.0"
 	},
 	"devDependencies": {
 		"@astrojs/tailwind": "^6.0.2",
