--- a/astro/package.json
+++ b/astro/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@astrojs/preact": "^4.1.3",
 		"@iconify-json/ri": "^1.2.9",
+		"@iconify/react": "^6.0.2",
 		"@splidejs/splide": "^4.1.4",
 		"astro": "^5.16.15",
 		"astro-icon": "^1.1.5",
