--- a/astro/package.json
+++ b/astro/package.json
@@ -10,7 +10,7 @@
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"format": "biome format --write .",
-		"fetch:blogs": "tsx --env-file .env.development src/scripts/fetchBlogsDuringBuild.ts"
+		"fetch:blogs": "tsx --env-file .env src/scripts/fetchBlogsDuringBuild.ts"
 	},
 	"dependencies": {
 		"@astrojs/preact": "^4.1.3",
