--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -9,3 +9,6 @@ cms_database_password = "<本番用DBパスワード>"
 
 git_repo_url = "https://github.com/Fukupro2023/homepage.git"
 git_ref     = "main"
+
+# 再デプロイ時に値を変えると deploy_app（clone/pull + build + up）が再実行される
+# deploy_trigger = "1"
