--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,14 @@ on:
     paths:
       - 'cms/**'
       - 'astro/**'
+      - 'terraform/**'
+      - '.github/workflows/ci.yml'
   push:
     paths:
       - 'cms/**'
       - 'astro/**'
       - 'terraform/**'
+      - '.github/workflows/ci.yml'
   workflow_dispatch:
 
 jobs:
@@ -31,6 +34,32 @@ jobs:
               - 'astro/**'
             terraform:
               - 'terraform/**'
+
+  terraform:
+    needs: changes
+    if: needs.changes.outputs.terraform == 'true'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.9"
+
+      - name: Terraform Init
+        run: terraform init -input=false
+
+      - name: Terraform Format
+        run: terraform fmt -check -recursive
+        continue-on-error: true
+
+      - name: Terraform Validate
+        run: terraform validate -no-color
 
   scan_ruby:
     needs: changes
