feat: CORS_ORIGINをdeployに追加

--- a/.github/workflows/deploy-rails.yml
+++ b/.github/workflows/deploy-rails.yml
@@ -27,9 +27,10 @@ jobs:
           CMS_DATABASE_PASSWORD: ${{ secrets.CMS_DATABASE_PASSWORD }}
           BASIC_AUTH_USER: ${{ secrets.BASIC_AUTH_USER }}
           BASIC_AUTH_PASSWORD: ${{ secrets.BASIC_AUTH_PASSWORD }}
+          CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
         run: |
-          printf 'RAILS_MASTER_KEY=%s\nCMS_DATABASE_PASSWORD=%s\nBASIC_AUTH_USER=%s\nBASIC_AUTH_PASSWORD=%s\n' \
-            "$RAILS_MASTER_KEY" "$CMS_DATABASE_PASSWORD" "$BASIC_AUTH_USER" "$BASIC_AUTH_PASSWORD" > env.production
+          printf 'RAILS_MASTER_KEY=%s\nCMS_DATABASE_PASSWORD=%s\nBASIC_AUTH_USER=%s\nBASIC_AUTH_PASSWORD=%s\nCORS_ORIGIN=%s\n' \
+            "$RAILS_MASTER_KEY" "$CMS_DATABASE_PASSWORD" "$BASIC_AUTH_USER" "$BASIC_AUTH_PASSWORD" "$CORS_ORIGIN" > env.production
 
       - name: Remove old app and clone
         env:
